RESOLVED FIXED172032
MediaResourceLoader shouldn't keep its HTMLMediaElement alive.
https://bugs.webkit.org/show_bug.cgi?id=172032
Summary MediaResourceLoader shouldn't keep its HTMLMediaElement alive.
Andreas Kling
Reported 2017-05-12 09:45:18 PDT
Attachments
Patch (4.95 KB, patch)
2017-05-12 09:46 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2017-05-12 09:46:13 PDT
Joseph Pecoraro
Comment 2 2017-05-12 11:01:03 PDT
Comment on attachment 309905 [details] Patch r=me
WebKit Commit Bot
Comment 3 2017-05-12 11:34:15 PDT
Comment on attachment 309905 [details] Patch Clearing flags on attachment: 309905 Committed r216771: <http://trac.webkit.org/changeset/216771>
WebKit Commit Bot
Comment 4 2017-05-12 11:34:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.