MediaResourceLoader shouldn't keep its HTMLMediaElement alive. https://bugs.webkit.org/show_bug.cgi?id=172032 <rdar://problem/30816144>

Reviewed by Joseph Pecoraro.

Use a WeakPtr<HTMLMediaElement> in MediaResourceLoader instead, since the loader
is retained by a NSURLSession object we hand over to AVFoundation.

This prevents AVFoundation from keeping entire documents alive outside our control.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement):
* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::createWeakPtr):
* loader/MediaResourceLoader.cpp:
(WebCore::MediaResourceLoader::MediaResourceLoader):
(WebCore::MediaResourceLoader::requestResource):
* loader/MediaResourceLoader.h:


Canonical link: https://commits.webkit.org/188975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216771 268f45cc-cd09-0410-ab3c-d52691b4dbfc